Finalization of the test units