@@ -25,6 +25,19 @@
                     <mainClass>com.greglie.employeemanagement.App</mainClass>
                 </configuration>
             </plugin>
+            
+            <plugin>
+                <groupId>org.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        -Djava.awt.headless=true
+                        -Dnet.bytebuddy.experimental=true
+                        -XX: 
+                    </argLine>
+                </configuration>
+            </plugin>
         </plugins>
     <resources>
         <resource>
@@ -50,12 +63,13 @@
         </dependency>
         
         <dependency>
-            <groupId> org.mockito</groupId>
+            <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.11.0</version>
+            <version>5.14.2</version>
             <scope>test</scope>
         </dependency>
         
+     
         <dependency>
                 <groupId>net.proteanit.sql</groupId>
                 <artifactId>rs2xml</artifactId>
